[fix/icon-box] Fix icon box hover covered by overlay

--- a/src/editor/blocks/icon-box/styles/style.scss
+++ b/src/editor/blocks/icon-box/styles/style.scss
@@ -10,6 +10,11 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
+
+
+        &::before {
+            pointer-events: none;
+        }
     }
     >a {
         text-decoration: none;
